# freeq

./: .gitignore  CLAUDE.md  Cargo.toml  Justfile  demo-phase1-interactive.py  demo-phase1.py  flake.nix  security-audit-2026-03-29.html
freeq-py/: .gitignore  Cargo.toml  IMPLEMENTATION_SUMMARY.md  PRD.md  README.md  check-protocol.sh  flake.nix  pyproject.toml  simulate_first_login.py  test_auth_flow.py  test_auto_login.py
freeq-py/.phoenix/: analysis.json  canonical.md  codegen-instruction.md  config.json  language-theory.json  plan.md  waivers.json
freeq-py/python/freeq_textual/: __init__.py  __main__.py  app.py  bootstrap.py  client.py  dev.py  formatting.py  models.py  widgets.py
freeq-py/spec/: README.md  app-state-fix.md  app-state-session-field-fix.md  app-state-session-fix.md  auth.md  auto-login-data-fix.md  auto-login-fix.md  auto-login-session-initialization-fix.md  auto-login-session-null-fix.md  avatar-fetching.md  buffersidebar-import-fix.md  client-message-visibility.md  codegen-completion-fix.md  emoji-picker-widget-id-fix.md  integration.md  irc-client.md  message-display-fix.md  message-list-compose-fix.md  message-widget-click-control.md  messaging.md  models-app-state-update.md  module-import-path-correction.md  module-import-path-fix.md  module-import-runtime-warning.md  module-not-found-fix.md  optimistic-ui-implementation.md  optimistic-ui.md  protocol.md  python-module-execution-fix.md  reactions.md  sidebar-css-pseudo-element-fix.md  sidebar-widget-id-sanitization-fix.md  textual-rich-text-import-fix.md  threading.md  ui-components.md  ui-theory.md  ui.aul  waivers.json
freeq-py/src/: lib.rs
freeq-py/src/authentication/: authentication_domain.py  test_authentication_domain.py
freeq-py/src/avatar/: avatar_domain.py  test_avatar_domain.py
freeq-py/src/broker/: broker_domain.py  test_broker_domain.py
freeq-py/src/buffer/: buffer_domain.py  test_buffer_domain.py
freeq-py/src/channel/: channel_domain.py  test_channel_domain.py
freeq-py/src/cli/: cli_domain.py  test_cli_domain.py
freeq-py/src/component/: component_domain.py  test_component_domain.py
freeq-py/src/connection/: connection_domain.py  test_connection_domain.py
freeq-py/src/content/: content_domain.py  test_content_domain.py
freeq-py/src/debug/: debug_domain.py  test_debug_domain.py
freeq-py/src/emoji/: emoji_domain.py  (+1 more)
freeq-py/tests/: test_messages_panel_regression.py  test_replay_batching.py
freeq-tui/: Cargo.toml
freeq-tui/src/: main.rs
(+146 files in other folders)
