[package]
name = "freeq-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Minimal TUI client for IRC with AT Protocol authentication"

[[bin]]
name = "freeq-tui"
path = "src/main.rs"

[[bin]]
name = "irc-at-tui"
path = "src/main.rs"

[dependencies]
freeq-sdk = { path = "../freeq-sdk" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
toml = "0.8"
ratatui = "0.30"
crossterm = "0.29"
hex = "0.4"
dirs = { workspace = true }
ratatui-image = { version = "10", optional = true }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
reqwest = { workspace = true }
open = "5"
whoami = "1"

[features]
default = []
inline-images = ["ratatui-image"]

[lints]
workspace = true
